# kmati-ingestion-framework

./: .gitignore  PUSH_TO_GITHUB.md  README.md  main_pipeline.ipynb
framework/: databricks.yml  pyproject.toml
framework/configs/: new_config.yaml
framework/kmati_medallion.egg-info/: PKG-INFO  SOURCES.txt
framework/resources/: jobs.yml  main_pipeline.py
framework/src/bronze/: processor.py
framework/src/common/: config.py
framework/src/silver/: processor.py  transformations.py
kmati_ingest/kmati_ing/Extractor Project/checkpoints/: minio_source.json
kmati_ingest/kmati_ing/extractor/checkpoints/: minio_source.json
kmati_ingest/kmati_ing/folder/: extractor.py  pyproject.toml
kmati_ingest/kmati_ing/folder/config/: json_config.yml  scd_config.yml  silver_config.yml
kmati_ingest/kmati_ing/folder/core/: asset_factory.py  base_asset.py  delta_asset.py  file_asset.py  silver_factory_asset.py
kmati_ingest/kmati_ing/folder/kmati_ingestion/: main.py
kmati_ingest/kmati_ing/folder/pipelines/: code_workspace  json_run.py  scd_run.py  silver_run.py
kmati_ingest/kmati_ing/kmati_ingestion/: README.md  databricks.yml  pyproject.toml
kmati_ingest/kmati_ing/kmati_ingestion/extractor/: config.yaml  extractor.py  rclone.conf
kmati_ingest/kmati_ing/kmati_ingestion/extractor/checkpoints/: minio_source.json
kmati_ingest/kmati_ing/kmati_ingestion/resources/: bronze_silver_jobs.yml  extractor_job.yml  kmati_ingestion_etl.pipeline.yml  sample_job.job.yml
kmati_ingest/kmati_ing/kmati_ingestion/src/: sample_notebook.ipynb
kmati_ingest/kmati_ing/kmati_ingestion/src/configs/: bronze_silver_config.yaml
kmati_ingest/kmati_ing/kmati_ingestion/src/kmati_ingestion_etl/: README.md  runner.py
kmati_ingest/kmati_ing/kmati_ingestion/src/kmati_ingestion_etl/transformations/: sample_trips_kmati_ingestion.py  sample_zones_kmati_ingestion.py
kmati_ingest/kmati_ing/kmati_ingestion/src/transformations/: bronze_transformations.py  silver_transformations.py
kmati_ingest/kmati_ing/kmati_ingestion/tests/: sample_taxis_test.py
