[project]
name = "kmati-ingestion"
version = "0.0.1"
description = "KMATI ingestion framework with extractor"
authors = [
    { name = "Patibandla Swaroopa", email = "swaroopapatibandla@gmail.com" }
]
requires-python = ">=3.10,<3.13"

# -------------------------------------------------
# Runtime dependencies (keep minimal for Databricks)
# -------------------------------------------------
dependencies = [
    "pyyaml"
]

# -------------------------------------------------
# ENTRY POINTS (Databricks Jobs use this)
# -------------------------------------------------
# This allows Databricks to run the extractor task
# via python_wheel_task → run-extractor
[project.scripts]
run-extractor = "extractor.extractor:main"

# -------------------------------------------------
# INCLUDE NON-PYTHON FILES IN WHEEL (VERY IMPORTANT)
# -------------------------------------------------
# This ensures extractor/config.yaml is available
# when the wheel runs on Databricks
[tool.hatch.build]
include = [
    "extractor/config.yaml"
]

# -------------------------------------------------
# DEVELOPMENT DEPENDENCIES
# -------------------------------------------------
[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5"
]

# -------------------------------------------------
# BUILD SYSTEM (required by Databricks Bundles)
# -------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------------------------------
# FORMATTER
# -------------------------------------------------
[tool.black]
line-length = 125
